tests/compile_fail/display/since_1_41/wrong_named_parameter.rs
#[derive(derive_more::Display)]
#[display(fmt = "Stuff({bars})")]
pub struct Foo {
    bar: String,
}

fn main() {}
